# venue-playlists

./: .env.example  .gitignore  DEVELOPMENT.md  Gemfile  README.md  TODO.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  vercel.json
.github/workflows/: deploy.yml  update-and-deploy.yml  update-venue-data.yml
api/: __init__.py  config.py  requirements.txt  setup.py  venues.py
api/tests/: conftest.py  test_config.py  test_edge_cases.py  test_paths.py  test_venues.py
api/venue_playlists_api/: __init__.py  config.py  utils.py  venues.py
api/venue_playlists_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: paths.py
data/examples/: cities.yaml
data_processing/: generate_playlists.py
data_processing/playlist_data/: __init__.py  auth.py  config.py  generator.py
data_processing/spotify_service/: artist_search.py
data_processing/tests/: conftest.py  test_playlist_data.py  test_venue_data.py
data_processing/venue_data/: artist_extractor.py  models.py  scraper.py
docs/: ENVIRONMENT.md
docs/roadmap/: cost-management.md  droplet-migration.md  enhancements.md  features.md  future-concepts.md  immediate-tasks.md
scripts/: build_website_data.py  check_server_status.sh  collect_events.py  generate_playlists.py  setup.py  update_all.py
scripts/playlist_data/: auth.py  config.py  generator.py  storage.py
scripts/tests/: __init__.py  test_playlist_data.py  test_venue_data.py
scripts/venue_data/: __init__.py  config.py  (+10 more)
venue_playlists_api/: __init__.py  app.py  config.py  utils.py  venues.py
website/: _config.yml  index.html
(+59 files in other folders)
