[tool.poetry]
name = "venue-playlists"
version = "0.1.0"
description = "A service that generates Spotify playlists based on venue lineups"
authors = ["Matt Mock"]
readme = "README.md"
packages = [
    { include = "data_processing" },
    { include = "venue_playlists_api" },
    { include = "api" },
    { include = "config" },
    { include = "venue_data" }
]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "1.0.0"
pyyaml = "6.0.1"
spotipy = "2.23.0"
requests = "2.31.0"
openai = "1.12.0"
beautifulsoup4 = "4.12.3"
tiktoken = "0.6.0"
filelock = "3.13.1"
selenium = "4.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"
isort = "^5.13.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["api/tests", "data_processing/tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=. --cov-report=term-missing"
